# raven

./: .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  logo.png.license  org.kde.kmailquick.appdata.xml  org.kde.kmailquick.desktop  org.kde.raven.appdata.xml  org.kde.raven.daemon-autostart.desktop  org.kde.raven.daemon.service.in  org.kde.raven.desktop  org.kde.ravend.service.in  org.kde.ravend.service.in.license  raven.kdev4
flatpak/: corrosion.json  (+2 more)
src/: CMakeLists.txt  accountworker.cpp  accountworker.h  composerhelper.cpp  composerhelper.h  constants.h  crypto.cpp  dbmanager.cpp  dbmanager.h  dbwatcher.cpp  identitymodel.cpp  identitymodel.h  mailmodel.cpp  mailmodel.h  main.cpp  messagewrapper.cpp  messagewrapper.h  oauth_providers.json  quickmail.cpp  quickmail.h  raven.cpp  raven.h  resources.qrc  utils.cpp  utils.h  viewcomposercore.cpp  viewcomposercore.h
src/accounts/: ispdb.cpp  mailaccounts.cpp  mailaccounts.h  newaccount.cpp  newaccount.h  newaccountmanager.cpp  newaccountmanager.h
src/accounts/ispdb/: autoconfigkolabfreebusy.h  autoconfigkolabldap.h  autoconfigkolabmail.h  ispdb.h
src/accounts/setup/: configfile.cpp  configfile.h  identity.cpp  identity.h  key.h  ldap.cpp  ldap.h  resource.cpp  restoreldapsettingsjob.cpp  restoreldapsettingsjob.h  setupautoconfigkolabfreebusy.cpp  setupautoconfigkolabfreebusy.h  setupautoconfigkolabldap.cpp  setupautoconfigkolabldap.h  setupautoconfigkolabmail.cpp  setupautoconfigkolabmail.h  setupispdb.cpp  setupispdb.h  setupmanager.cpp  setupmanager.h  setupobject.h  transport.cpp  transport.h
src/backendworker/: accountworker.cpp  accountworker.h  mailprocessor.cpp  mailprocessor.h  progresscollectors.h
src/contents/ui/: AboutPage.qml  Composer.qml  ConversationViewer.qml  FolderView.qml  MailDelegate.qml  MailSidebar.qml  MailViewer.qml  MessageViewer.qml  SettingsPage.qml  Sidebar.qml  main.qml
src/contents/ui/accounts/: AddAccountPage.qml  FormPasswordInputDelegate.qml  FormTextInputDelegate.qml
src/contents/ui/mailboxselector/: MailBoxList.qml  MailBoxListPage.qml  MailBoxListSidebar.qml
src/contents/ui/mailpartview/: MailPart.qml  MailPartModel.qml  MailPartView.qml  TextPart.qml
src/contents/ui/private/: AttachmentDelegate.qml
src/dbus/: org.kde.raven.daemon.xml
src/liboauthproviders/: CMakeLists.txt  oauthprovider.cpp  oauthprovider_bridge.cpp  oauthprovider_bridge.h
src/libraven/: CMakeLists.txt  accountmodel.cpp  accountmodel.h  constants.h  utils.cpp  utils.h
src/libraven/models/: account.cpp  account.h  file.cpp  file.h  folder.cpp  folder.h  label.cpp  label.h  message.cpp  message.h  messagecontact.cpp  messagecontact.h  thread.cpp  thread.h
src/mail/: CMakeLists.txt  mailplugin.cpp
src/messageviewer/: viewer.cpp  viewer.h
src/mime/: partmodel.cpp
src/models/: account.cpp  file.cpp  file.h  folder.cpp  folder.h  label.cpp  message.cpp  message.h  messagecontact.cpp  messagecontact.h  thread.cpp  thread.h
src/modelviews/: accountmodel.cpp  accountmodel.h  mailboxmodel.cpp  mailboxmodel.h
src/raven/: CMakeLists.txt  abouttype.cpp  abouttype.h  accountmodel.cpp  accountmodel.h  constants.h  daemonstatus.cpp  daemonstatus.h  dbmanager.cpp  dbmanager.h  dbwatcher.cpp  dbwatcher.h  loggingsqlquery.h  main.cpp  oauthprovider.cpp  oauthprovider.h  raven.cpp  raven.h  raven.notifyrc  ravensettings.kcfg  ravensettings.kcfgc  resources.qrc  resources_rc.py  threadviewbridge.cpp  threadviewbridge.h  utils.cpp  utils.h
src/raven/accounts/: googleoauth.cpp  googleoauth.h  ispdb.cpp  ispdb.h  newaccountmanager.cpp  newaccountmanager.h  oauthmanager.cpp  oauthmanager.h
src/raven/contents/ui/: ConversationViewer.qml  FolderView.qml  MailDelegate.qml  MailViewer.qml  SettingsPage.qml
src/raven/contents/ui/accounts/: AddAccountPage.qml  FormPasswordInputDelegate.qml  FormTextInputDelegate.qml  ManualAccountForm.qml
src/raven/contents/ui/mailboxselector/: MailBoxList.qml  MailBoxListSidebar.qml
src/raven/contents/ui/mailpartview/: HtmlPart.qml  ICalPart.qml  TextPart.qml
src/raven/models/: account.cpp  account.h  file.cpp  file.h  folder.cpp  folder.h  label.cpp  label.h  message.cpp  message.h  messagecontact.cpp  messagecontact.h  thread.cpp  thread.h
src/raven/modelviews/: attachmentmodel.cpp  attachmentmodel.h  mailboxmodel.cpp  mailboxmodel.h  maillistmodel.cpp  maillistmodel.h  threadviewmodel.cpp  threadviewmodel.h
src/raven/qml/: AboutPage.qml  ConversationViewer.qml  FolderView.qml  MailDelegate.qml  MailViewer.qml  Main.qml  SettingsPage.qml  ThreadViewer.qml
src/raven/qml/accounts/: AddAccountPage.qml  FormPasswordInputDelegate.qml  FormTextInputDelegate.qml  ManualAccountForm.qml
src/raven/qml/mailboxselector/: MailBoxList.qml  MailBoxListSidebar.qml
src/raven/qml/mailpartview/: HtmlPart.qml  TextPart.qml
src/raven/qml/private/: AttachmentDelegate.qml
src/raven/resources/threadview/: index.html  threadview.css  threadview.js
src/ravend/: CMakeLists.txt  Cargo.toml  accountworker.cpp  accountworker.h  dbmanager.cpp  dbmanager.h  dbuslistener.cpp  dbuslistener.h  mailcorelogger.cpp  mailprocessor.cpp  mailprocessor.h  main.cpp  progresscollectors.cpp  taskprocessor.h  workermanager.cpp
src/ravend-old/: CMakeLists.txt  mailcorelogger.h  progresscollectors.cpp  taskprocessor.cpp  workermanager.h
src/ravend/src/: constants.rs  main.rs
src/ravend/src/config/: account_manager.rs
src/ravend/src/db/: migrations.rs  mod.rs  operations.rs
src/ravend/src/dbus/: mod.rs
src/ravend/src/imap/: actions.rs  connection.rs  mod.rs  parser.rs  worker.rs
src/ravend/src/models/: file.rs  folder.rs  message.rs  mod.rs  thread.rs
src/ravend/src/notifications/: mod.rs
src/ravend/src/oauth2/: mod.rs  provider_bridge.rs  providers.rs
src/ravend/src/portal/: mod.rs
src/ravend/src/secrets/: mod.rs
src/ravend/src/tray/: mod.rs
src/rs/: CMakeLists.txt
src/rs/ravend/: Cargo.toml
src/rs/ravend/src/: kwallet_bridge.cpp  kwallet_bridge.h  main.rs  tray_bridge.cpp  tray_bridge.h
(+19 files in other folders)
